修改在鸿蒙系统拍照的bug

--- a/Android/app/src/main/res/xml/file_paths.xml
+++ b/Android/app/src/main/res/xml/file_paths.xml
@@ -7,4 +7,7 @@
     <external-path
         name="external_pictures"
         path="Pictures" />
+
+    <!-- 鸿蒙可能需要额外路径 -->
+    <root-path name="root" path="." />
 </paths>
